<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <EditText
        android:id="@+id/etmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:autoLink="map"
        android:ems="10"
        android:hint="@string/enter_your_location"
        android:inputType="textPersonName"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnfindmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#0FA817"
        android:text="@string/find"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btncancelmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#DE2020"
        android:text="@string/cancel"
        android:textStyle="bold" />

</LinearLayout>